--- a/note-nexus-frontend/package.json
+++ b/note-nexus-frontend/package.json
@@ -18,8 +18,8 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "^5.0.1",
     "react-spinners": "^0.14.1",
-    "web-vitals": "^2.1.4",
-    "webpack": "^5.95.0"
+    "react-toastify": "^10.0.6",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +52,9 @@
     "eslint-plugin-jsx-a11y": "^6.10.1",
     "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   }
 }
